fix: ajusta dark mode da logo

--- a/src/client/screens/Home/styles.module.css
+++ b/src/client/screens/Home/styles.module.css
@@ -213,11 +213,11 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .vercelLogo {
+  html[data-theme="dark"] .vercelLogo {
     filter: invert(1);
   }
 
-  .logo {
+  html[data-theme="dark"] .logo {
     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
   }
 }
